2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/acpi.c (grub_acpi_create_ebda) [!x86]: Disable.
	(grub_cmd_acpi) [!x86]: Disable EBDA.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	Enable UTF8 in gnulib regexp.

	* config.h.in (RE_ENABLE_I18N) [!GRUB_UTIL]: New define.
	* grub-core/lib/posix_wrap/ctype.h (islower): Use grub_islower.
	(isupper): Use grub_isupper.
	(isascii): New inline function.
	* grub-core/lib/posix_wrap/wchar.h: Replace dummy with real contents.
	* grub-core/lib/posix_wrap/wctype.h: Likewise.
	* grub-core/normal/charset.c (grub_utf8_process): New function.
	(grub_utf8_to_utf16): Use grub_utf8_process.
	(grub_encode_utf8_character): New function.
	(grub_ucs4_to_utf8): Use grub_encode_utf8_character.
	* include/grub/charset.h (grub_utf8_process): New declaration.
	(grub_encode_utf8_character): Likewise.
	* include/grub/misc.h (grub_islower): New inline function.
	(grub_isupper): Likewise.
	(grub_strchrsub): Moved down to fix the definitions.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/bus/usb/ohci.c (grub_ohci_check_transfer): Add an unsigned
	specification.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/loader.h (grub_loader_register_preboot_hook):
	Use struct preboot * and not void * for handle. All users updated.
	(grub_loader_unregister_preboot_hook): Likewise.

2011-12-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/charset.h (GRUB_MAX_UTF8_PER_UTF16): New const.
	* grub-core/fs/hfsplus.c (grub_hfsplus_catkey_internal): Change to
	UTF-16-BE. All users updated.
	(grub_hfsplus_cmp_catkey): Fix unicode handling.
	(grub_hfsplus_iterate_dir): Likewise.
	(grub_hfsplus_label): Likewise.

2011-12-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/ahci.c (grub_ahci_pciinit): Fix compat condition.

2011-11-30  Vladimir Serbinenko  <phcoder@gmail.com>

	Add missing const qualifiers.
